Avalara Fullqa/src/B2B Commerce/objects/E_OrderTerm__c.object
<CustomObject>
    <description>The E_OrderTerm__c object contains the agreed to terms from the ccrz__E_Term__c object(s) agreed to at the time the order was placed.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>The terms agreed to.</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order these terms refer to.</description>
        <label>Order</label>
        <referenceTo>E_Order__c</referenceTo>
        <relationshipLabel>CC Order Terms</relationshipLabel>
        <relationshipName>OrderTerms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the terms agreed to.</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CC Order Term</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CC Order Term Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Order Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>